option('disable-rtti', type : 'boolean', value: true)
option('disable-exceptions', type : 'boolean', value: false)
option('enable-pedantic-error', type: 'boolean', value: false)
option('enable-werror', type: 'boolean', value: false)
option('use-compiler-rt', type: 'boolean', value: false)
option('always-enable-assert', type: 'boolean', value: true)
option('use-llvm-libunwind', type: 'boolean', value: true)
option('libcxx-enable-threads', type: 'boolean', value: true)
option('libcxx-has-external-thread-api', type: 'boolean', value: false)
option('libcxx-build-external-thread-api', type: 'boolean', value: false)
option('libcxx-enable-filesystem', type: 'boolean', value: false)
option('libcxx-enable-stdinout', type: 'boolean', value: true)
option('libcxx-default-newdelete', type: 'boolean', value: true)
option('libcxx-silent-terminate', type: 'boolean', value: false)
