option('force-32-bit', type: 'boolean', value: false, yield: true)
option('disable-rtti', type : 'boolean', value: true, yield: true)
option('disable-exceptions', type : 'boolean', value: false, yield: true)
option('enable-pedantic-error', type: 'boolean', value: false, yield: true)
option('enable-werror', type: 'boolean', value: false, yield: true)
option('use-compiler-rt', type: 'boolean', value: false, yield: true)
option('always-enable-assert', type: 'boolean', value: true, yield: true)
option('use-llvm-libunwind', type: 'boolean', value: true, yield: true)
option('libcxx-enable-chrono', type: 'boolean', value: true, yield: true)
option('libcxx-enable-threads', type: 'boolean', value: true, yield: true)
option('libcxx-has-external-thread-api', type: 'boolean', value: false, yield: true)
option('libcxx-build-external-thread-api', type: 'boolean', value: false, yield: true)
option('libcxx-enable-filesystem', type: 'boolean', value: false, yield: true)
option('libcxx-enable-stdinout', type: 'boolean', value: true, yield: true)
option('libcxx-default-newdelete', type: 'boolean', value: true, yield: true)
option('libcxx-silent-terminate', type: 'boolean', value: false, yield: true)
option('libcxx-monotonic-clock', type: 'boolean', value: true, yield: true)
